# obj_io

./: README.md  pyproject.toml
examples/: load_save.py
obj_io/: __init__.py  core.py  obj_io.py
