[tool.poetry]
name = "obj-io"
version = "0.1.0"
description = ""
authors = ["unlclearness <unclearness.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "obj_io"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
